tests/snapshot/error/source_locations/statement/for_of/iterator_next.exp
Error: 
  ┌ source_locations/statement/for_of/iterator_next.js:5:15
  |
5 |         throw new Error();
  |               ^
Stack trace:
  at next (source_locations/statement/for_of/iterator_next.js:5:15)
  at <global> (source_locations/statement/for_of/iterator_next.js:11:12)